--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
   },
   "homepage": "http://mobxjs.github.com/mobx",
   "devDependencies": {
+    "react-hot-loader": "^1.3.0",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.2",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
+    "material-ui": "^0.15.2",
     "mobx": "^2.3.2",
     "mobx-react": "^3.3.1",
     "mobx-react-devtools": "^4.2.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
